# tabularML

./: .gitignore  README.md  pipeline.py  pyproject.toml  readme.md  setup.bat  setup.sh  ui.py
