[project]
name = "tabular-ml"
version = "0.1.0"
description = "A versatile machine learning pipeline for tabular data with Streamlit UI"
readme = "readme.md"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "scikit-learn",
    "lightgbm",
    "matplotlib",
    "streamlit",
    "joblib",
    "numpy",
    "plotly",
    "seaborn",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0", 
    "flake8>=6.0.0",
]